--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,17 @@
 
     </head>
     <body>
+        <header>
 
+        </header>
+        <main>
+
+        </main>
+        <footer>
+            
+        </footer>
     </body>
-    <footer></footer>
+    <footer>
+
+    </footer>
 </html>
